# likhit

./: .gitignore  Dockerfile  LICENSE  LICENSING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml  spdx-header-check.yml
docs/: cib-press-release-extraction.md  docx-doc-support-summary.md  publishing.md
src/likhit/: __init__.py  _plugin.py  cli.py  core.py  errors.py  font_classifier.py  legacy_maps.py  markdown_assembly.py  markitdown_integration.py  nepali_pdf_repair.py  pdf_page_analysis.py  save_cli.py  sentry_init.py  version.py
src/likhit/application/: __init__.py  convert.py
src/likhit/converters/: nepali_docx.py  nepali_pdf.py
src/likhit/document_types/: __init__.py  base.py  ciaa_press_release.py  content_blocks.py  kanun_patrika.py
src/likhit/extraction/: __init__.py  base.py
src/likhit/extraction/pdf/: __init__.py  font_based.py  font_classifier.py  kalimati.py  repair.py  tables.py
src/likhit/extraction/word/: __init__.py  docx_based.py
src/likhit/extractors/: __init__.py  base.py  docx_based.py  font_based.py  font_classifier.py  kalimati.py  legacy_maps.py  tables.py
src/likhit/handlers/: __init__.py  base.py  ciaa_press_release.py  content_blocks.py  kanun_patrika.py  routing.py  single_column_notice.py  structure_detection.py  two_column_layout.py
src/likhit/markdown/: __init__.py  assembly.py  renderer.py
src/likhit/models/: __init__.py  repair_types.py  types.py
src/likhit/renderers/: __init__.py  base.py  markdown.py
src/likhit/service/: logging_utils.py  main.py
tests/: synthetic_pdfs.py  test_cli.py  test_convert.py  test_docx_extraction.py  test_extraction.py  test_font_based.py  test_models.py  test_pdf_page_analysis.py  test_scanned_pdf_detection.py  test_sentry_init.py  test_service.py  test_smoke.py  test_structure_detection.py
tests/integration/: README.md  __init__.py  conftest.py  test_cib_pdfs.py  test_conversion_success.py  test_sample_pdfs.py
tests/integration/test_data/: ciaa_legacy_sample.doc  ciaa_pressrelease_sample.docx
