[project]
name = "likhit"
version = "0.1.0"
description = "Document extraction pipeline for Nepali official documents"
authors = [
    { name = "notashwinii", email = "ashwinii.subedi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pymupdf>=1.27.2,<2.0.0",
    "pyyaml>=6.0,<7.0"
]

[tool.poetry]
packages = [{ include = "likhit", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.11.0"
black = "^25.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"